--- a/madertainment-app/src/index.css
+++ b/madertainment-app/src/index.css
@@ -16,6 +16,14 @@ code {
     text-align: left;
 }
 
+.box {
+    width: 200px; /* Set the width as needed */
+    height: 150px; /* Set the height as needed */
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px; /* Space outside the box */
+}
+
 h1 {
     color: rgb(168, 40, 168);
 }
