--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,3 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask Web App</title>
-</head>
-<body>
-    <h1>Welcome to My Flask Web App</h1>
-    
-    {% if greeting %}
-        <p>{{ greeting }}</p>
-    {% else %}
-        <p>Enter your name:</p>
-        <form method="post" action="{{ url_for('process_form') }}">
-            <input type="text" name="name" required>
-            <button type="submit">Submit</button>
-        </form>
-    {% endif %}
-</body>
+    <div id="root"></div>
 </html>
